[package]
name = "rjd"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "classfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
thiserror = "1"
strum = "0.24"
strum_macros = "0.24"
classfile = { path = "./classfile", version = "*" }
petgraph = "0.6.3"
